# potential-shop-links

./: .gitignore  Cargo.toml  Shuttle.toml  docker-compose.yaml  package.json  webpack.config.js
dependencies/: index.js  mathFunctions.js
src/: error.rs  globals.rs  main.rs
src/dao/: entry.rs  mod.rs  user.rs
src/server/: mod.rs  proxy.rs
src/server/entry/: create.rs  delete.rs
src/server/user/: auth.rs  create.rs
src/server/web/: index.rs  login.rs
static/: .gitignore  bundle.js  entries.css
templates/: index.html  login.html
