[package]
name = "potential-shop-links"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
log = "0.4.21"
mime = "0.3.17"
serde = { version = "1.0.201", features = ["derive"] }
shuttle-actix-web = "0.45.0"
shuttle-runtime = "0.45.0"
sqlx = { version = "0.7.4", features = ["sqlite", "chrono", "runtime-tokio"] }
tera = "1.19.1"
tokio = "1.26.0"
