[package]
name = "potential-shop-links"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-web = "4.5.1"
base64 = "0.22.1"
bson = "2.11.0"
futures = "0.3.30"
log = "0.4.21"
mime = "0.3.17"
mongodb = { version = "2.8.2", features = ["tokio-runtime"] }
reqwest = "0.12.4"
serde = { version = "1.0.201", features = ["derive"] }
shuttle-actix-web = "0.45.0"
shuttle-runtime = "0.45.0"
tera = "1.19.1"
tokio = "1.26.0"
